# muscle-fiber-model

./: .gitignore  ActinBundle.cpp  ActinBundle.h  AnchoredSpring.h  CMakeLists.txt  CMakePresets.json  FiberElement.cpp  FiberElement.h  FiberElement.ipp  FiberStress.cpp  FiberStress.h  Jellyfish.py  Model.cpp  Model.h  MuscleTissueElement.cpp  MuscleTissueElement.h  MuscleTissueModel.cpp  MuscleTissueModel.h  NeoHookeanMURI.cpp  NeoHookeanMURI.h  PillarModel.cpp  PillarModel.h  README.md  csv_script.py  data_to_mesh.cpp  data_to_mesh.h  debug.py  distance.cpp  distance.h  error_metrics.py  exp_results.py  fitting.ipynb  main.cpp  main.ipynb  main.py  meshing.py  newton.cpp  newton.h  optim_parameters.py  param.py  (+8 more)
data/: Phi_720.npy  Phi_80.npy  V_720.npy  V_80.npy
data/3 post/: Phi_3post.npy  V_3post.npy  eta1_measured.npy  eta2_measured.npy  eta3_measured.npy  eta4_measured.npy
data/3.5hrs/: eta1_measured.npy  eta2_measured.npy  eta3_measured.npy  theta1_measured.npy  theta2_measured.npy  theta3_measured.npy
data/7D/: theta1_measured.npy  theta2_measured.npy  theta3_measured.npy
legacy/: ActinBundle.h  FiberElement.cpp  Model.cpp
